[package]
name = "haz-alloc"
version = "0.2.1"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicbn/haz-alloc"
description = "A general-purpose allocator written in Rust"
keywords = ["alloc", "allocator", "allocation"]
categories = ["memory-management"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "memoryapi", "winnt", "sysinfoapi", "synchapi", "processthreadsapi", "fibersapi"
]

[dependencies]
haz-alloc-core = { version = "0.2", path = "../haz-alloc-core" }
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
haz-alloc-internal = { version = "0.0.1", path = "../haz-alloc-internal" }
